First part have done

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-host_key_cheking = false
-inventory        = ./inventory.txt
+host_key_checking = False
+inventory         = ./inventory.txt
 
